Fixed wrong padding in skills

--- a/v5.0/style.css
+++ b/v5.0/style.css
@@ -576,7 +576,7 @@ section {
 
     padding: 10px;
 
-    height: 100%;
+    height: auto;
     width: 100%;
 }
 
